
stInclude = include_directories('.')

st_headers = files([
  'st-adjustment.h',
  'st-background-effect.h',
  'st-bin.h',
  'st-border-image.h',
  'st-box-layout-child.h',
  'st-box-layout.h',
  'st-button.h',
  'st-clipboard.h',
  'st-cogl-wrapper.h',
  'st-drawing-area.h',
  'st-entry.h',
  'st-focus-manager.h',
  'st-group.h',
  'st-icon-colors.h',
  'st-icon.h',
  'st-im-text.h',
  'st-label.h',
  'st-polygon.h',
  'st-private.h',
  'st-scroll-bar.h',
  'st-scroll-view.h',
  'st-scrollable.h',
  'st-shadow.h',
  'st-table-child.h',
  'st-table.h',
  'st-texture-cache.h',
  'st-theme-context.h',
  'st-theme-node.h',
  'st-theme.h',
  'st-types.h',
  'st-widget-accessible.h',
  'st-widget.h',
])

st_enums = gnome.mkenums('st-enum-types',
  h_template: 'st-enum-types.h.in',
  c_template: 'st-enum-types.c.in',
  sources: st_headers,
)

st_sources = [
  'st-adjustment.c',
  'st-background-effect.c',
  'st-bin.c',
  'st-border-image.c',
  'st-box-layout-child.c',
  'st-box-layout.c',
  'st-button.c',
  'st-clipboard.c',
  'st-cogl-wrapper.c',
  'st-drawing-area.c',
  'st-entry.c',
  'st-focus-manager.c',
  'st-group.c',
  'st-icon-colors.c',
  'st-icon.c',
  'st-im-text.c',
  'st-label.c',
  'st-polygon.c',
  'st-private.c',
  'st-scroll-bar.c',
  'st-scroll-view-fade.c', # non-gir
  'st-scroll-view.c',
  'st-scrollable.c',
  'st-shadow.c',
  'st-table-child.c',
  'st-table.c',
  'st-texture-cache.c',
  'st-theme-context.c',
  'st-theme-node-drawing.c',
  'st-theme-node-transition.c',
  'st-theme-node.c',
  'st-theme.c',
  'st-widget.c',
  st_enums,
]


libcinnamon_st = static_library('cinnamon-st',
  st_sources,
  dependencies: [
    cinnamon_desktop,
    muffin_clutter,
    muffin_coglpango,
    muffin_coglpath,
    muffin_cogl,
    gtk3,
    libcroco,
    math,
    x11,
  ],
  include_directories: [ rootInclude, srcInclude, ],
  c_args: [
    '-DG_LOG_DOMAIN="St"',
    '-DST_COMPILATION',
  ],
)


test('theme',
  executable('test-theme',
    'test-theme.c',
    link_whole: libcinnamon_st,
    dependencies: [
      muffin_clutter,
      gtk3,
    ],
    include_directories: [ rootInclude, srcInclude, ],
    c_args: [
      '-DG_LOG_DOMAIN="St"',
      '-DST_COMPILATION',
    ],
  ),
)
