cinnamondir = $(datadir)
nobase_dist_cinnamon_SCRIPTS = \
	cinnamon/cinnamon-settings-users/cinnamon-settings-users.py \
	cinnamon/cinnamon-looking-glass/cinnamon-looking-glass.py \
	cinnamon/cinnamon-desktop-editor/cinnamon-desktop-editor.py \
	cinnamon/applets/grouped-window-list@cinnamon.org/utils.py \
	cinnamon/cinnamon-screensaver-lock-dialog/cinnamon-screensaver-lock-dialog.py \
	cinnamon/cinnamon-settings/bin/CinnamonGtkSettings.py \
	cinnamon/cinnamon-settings/bin/KeybindingWidgets.py \
	cinnamon/cinnamon-settings/bin/SettingsWidgets.py \
	cinnamon/cinnamon-settings/cinnamon-settings.py \
	cinnamon/cinnamon-settings/modules/cs_accessibility.py \
	cinnamon/cinnamon-settings/modules/cs_backgrounds.py \
	cinnamon/cinnamon-settings/modules/cs_calendar.py \
	cinnamon/cinnamon-settings/modules/cs_default.py \
	cinnamon/cinnamon-settings/modules/cs_desktop.py \
	cinnamon/cinnamon-settings/modules/cs_effects.py \
	cinnamon/cinnamon-settings/modules/cs_extensions.py \
	cinnamon/cinnamon-settings/modules/cs_fonts.py \
	cinnamon/cinnamon-settings/modules/cs_general.py \
	cinnamon/cinnamon-settings/modules/cs_hotcorner.py \
	cinnamon/cinnamon-settings/modules/cs_info.py \
	cinnamon/cinnamon-settings/modules/cs_keyboard.py \
	cinnamon/cinnamon-settings/modules/cs_mouse.py \
	cinnamon/cinnamon-settings/modules/cs_notifications.py \
	cinnamon/cinnamon-settings/modules/cs_online_accounts.py \
	cinnamon/cinnamon-settings/modules/cs_panel.py \
	cinnamon/cinnamon-settings/modules/cs_power.py \
	cinnamon/cinnamon-settings/modules/cs_privacy.py \
	cinnamon/cinnamon-settings/modules/cs_screensaver.py \
	cinnamon/cinnamon-settings/modules/cs_sound.py \
	cinnamon/cinnamon-settings/modules/cs_startup.py \
	cinnamon/cinnamon-settings/modules/cs_themes.py \
	cinnamon/cinnamon-settings/modules/cs_tiling.py \
	cinnamon/cinnamon-settings/modules/cs_user.py \
	cinnamon/cinnamon-settings/modules/cs_windows.py \
	cinnamon/cinnamon-settings/modules/cs_workspaces.py \
	cinnamon/cinnamon-settings/xlet-settings.py \
	cinnamon/cinnamon-slideshow/cinnamon-slideshow.py \
	cinnamon/desklets/launcher@cinnamon.org/editorDialog.py
nobase_dist_cinnamon_DATA = \
	applications/cinnamon-killer-daemon.desktop \
	applications/cinnamon-menu-editor.desktop \
	applications/cinnamon-onscreen-keyboard.desktop \
	applications/cinnamon-settings-applets.desktop \
	applications/cinnamon-settings-backgrounds.desktop \
	applications/cinnamon-settings-calendar.desktop \
	applications/cinnamon-settings-default.desktop \
	applications/cinnamon-settings-desklets.desktop \
	applications/cinnamon-settings-desktop.desktop \
	applications/cinnamon-settings-effects.desktop \
	applications/cinnamon-settings-extensions.desktop \
	applications/cinnamon-settings-fonts.desktop \
	applications/cinnamon-settings-general.desktop \
	applications/cinnamon-settings-hotcorner.desktop \
	applications/cinnamon-settings-info.desktop \
	applications/cinnamon-settings-keyboard.desktop \
	applications/cinnamon-settings-mouse.desktop \
	applications/cinnamon-settings-notifications.desktop \
	applications/cinnamon-settings-panel.desktop \
	applications/cinnamon-settings-power.desktop \
	applications/cinnamon-settings-privacy.desktop \
	applications/cinnamon-settings-screensaver.desktop \
	applications/cinnamon-settings-sound.desktop \
	applications/cinnamon-settings-startup.desktop \
	applications/cinnamon-settings-themes.desktop \
	applications/cinnamon-settings-tiling.desktop \
	applications/cinnamon-settings-universal-access.desktop \
	applications/cinnamon-settings-user.desktop \
	applications/cinnamon-settings-users.desktop \
	applications/cinnamon-settings-windows.desktop \
	applications/cinnamon-settings-workspaces.desktop \
	applications/cinnamon-settings.desktop \
	applications/cinnamon2d.desktop \
	cinnamon/applets/a11y@cinnamon.org/applet.js \
	cinnamon/applets/a11y@cinnamon.org/metadata.json \
	cinnamon/applets/calendar@cinnamon.org/applet.js \
	cinnamon/applets/calendar@cinnamon.org/calendar.js \
	cinnamon/applets/calendar@cinnamon.org/metadata.json \
	cinnamon/applets/calendar@cinnamon.org/settings-schema.json \
	cinnamon/applets/expo@cinnamon.org/applet.js \
	cinnamon/applets/expo@cinnamon.org/icons/cinnamon-expo-symbolic.svg \
	cinnamon/applets/expo@cinnamon.org/metadata.json \
	cinnamon/applets/expo@cinnamon.org/settings-schema.json \
	cinnamon/applets/grouped-window-list@cinnamon.org/appGroup.js \
	cinnamon/applets/grouped-window-list@cinnamon.org/appList.js \
	cinnamon/applets/grouped-window-list@cinnamon.org/applet.js \
	cinnamon/applets/grouped-window-list@cinnamon.org/constants.js \
	cinnamon/applets/grouped-window-list@cinnamon.org/icons/news-symbolic.svg \
	cinnamon/applets/grouped-window-list@cinnamon.org/icons/pin-symbolic.svg \
	cinnamon/applets/grouped-window-list@cinnamon.org/icons/screenshot-area-symbolic.svg \
	cinnamon/applets/grouped-window-list@cinnamon.org/icons/screenshot-fullscreen-symbolic.svg \
	cinnamon/applets/grouped-window-list@cinnamon.org/icons/screenshot-window-symbolic.svg \
	cinnamon/applets/grouped-window-list@cinnamon.org/icons/store-symbolic.svg \
	cinnamon/applets/grouped-window-list@cinnamon.org/icons/unpin-symbolic.svg \
	cinnamon/applets/grouped-window-list@cinnamon.org/icons/view-private-symbolic.svg \
	cinnamon/applets/grouped-window-list@cinnamon.org/icons/window-new-symbolic.svg \
	cinnamon/applets/grouped-window-list@cinnamon.org/icons/x-office-database-symbolic.svg \
	cinnamon/applets/grouped-window-list@cinnamon.org/icons/x-office-math-symbolic.svg \
	cinnamon/applets/grouped-window-list@cinnamon.org/menus.js \
	cinnamon/applets/grouped-window-list@cinnamon.org/metadata.json \
	cinnamon/applets/grouped-window-list@cinnamon.org/settings-schema.json \
	cinnamon/applets/inhibit@cinnamon.org/applet.js \
	cinnamon/applets/inhibit@cinnamon.org/icons/inhibit-active-symbolic.svg \
	cinnamon/applets/inhibit@cinnamon.org/icons/inhibit-symbolic.svg \
	cinnamon/applets/inhibit@cinnamon.org/metadata.json \
	cinnamon/applets/keyboard@cinnamon.org/applet.js \
	cinnamon/applets/keyboard@cinnamon.org/metadata.json \
	cinnamon/applets/menu@cinnamon.org/applet.js \
	cinnamon/applets/menu@cinnamon.org/metadata.json \
	cinnamon/applets/menu@cinnamon.org/settings-schema.json \
	cinnamon/applets/notifications@cinnamon.org/applet.js \
	cinnamon/applets/notifications@cinnamon.org/icons/alt-critical-notif-symbolic.svg \
	cinnamon/applets/notifications@cinnamon.org/icons/critical-notif-symbolic.svg \
	cinnamon/applets/notifications@cinnamon.org/icons/empty-notif-symbolic.svg \
	cinnamon/applets/notifications@cinnamon.org/icons/low-notif-symbolic.svg \
	cinnamon/applets/notifications@cinnamon.org/icons/normal-notif-symbolic.svg \
	cinnamon/applets/notifications@cinnamon.org/metadata.json \
	cinnamon/applets/notifications@cinnamon.org/settings-schema.json \
	cinnamon/applets/on-screen-keyboard@cinnamon.org/applet.js \
	cinnamon/applets/on-screen-keyboard@cinnamon.org/icons/on-screen-keyboard-disabled-symbolic.svg \
	cinnamon/applets/on-screen-keyboard@cinnamon.org/icons/on-screen-keyboard-symbolic.svg \
	cinnamon/applets/on-screen-keyboard@cinnamon.org/metadata.json \
	cinnamon/applets/panel-launchers@cinnamon.org/applet.js \
	cinnamon/applets/panel-launchers@cinnamon.org/metadata.json \
	cinnamon/applets/panel-launchers@cinnamon.org/settings-schema.json \
	cinnamon/applets/power@cinnamon.org/applet.js \
	cinnamon/applets/power@cinnamon.org/metadata.json \
	cinnamon/applets/power@cinnamon.org/settings-schema.json \
	cinnamon/applets/printers@cinnamon.org/applet.js \
	cinnamon/applets/printers@cinnamon.org/cancel-print-dialog.py \
	cinnamon/applets/printers@cinnamon.org/lpstat-a.py \
	cinnamon/applets/printers@cinnamon.org/metadata.json \
	cinnamon/applets/printers@cinnamon.org/settings-schema.json \
	cinnamon/applets/recent@cinnamon.org/applet.js \
	cinnamon/applets/recent@cinnamon.org/metadata.json \
	cinnamon/applets/removable-drives@cinnamon.org/applet.js \
	cinnamon/applets/removable-drives@cinnamon.org/metadata.json \
	cinnamon/applets/scale@cinnamon.org/applet.js \
	cinnamon/applets/scale@cinnamon.org/icons/cinnamon-scale-symbolic.svg \
	cinnamon/applets/scale@cinnamon.org/metadata.json \
	cinnamon/applets/scale@cinnamon.org/settings-schema.json \
	cinnamon/applets/separator@cinnamon.org/applet.js \
	cinnamon/applets/separator@cinnamon.org/metadata.json \
	cinnamon/applets/settings-example@cinnamon.org/CustomWidget.py \
	cinnamon/applets/settings-example@cinnamon.org/applet.js \
	cinnamon/applets/settings-example@cinnamon.org/metadata.json \
	cinnamon/applets/settings-example@cinnamon.org/settings-schema.json \
	cinnamon/applets/settings@cinnamon.org/applet.js \
	cinnamon/applets/settings@cinnamon.org/metadata.json \
	cinnamon/applets/show-desktop@cinnamon.org/applet.js \
	cinnamon/applets/show-desktop@cinnamon.org/metadata.json \
	cinnamon/applets/show-desktop@cinnamon.org/settings-schema.json \
	cinnamon/applets/slideshow@cinnamon.org/applet.js \
	cinnamon/applets/slideshow@cinnamon.org/icons/slideshow-disabled-symbolic.svg \
	cinnamon/applets/slideshow@cinnamon.org/icons/slideshow-pause-symbolic.svg \
	cinnamon/applets/slideshow@cinnamon.org/icons/slideshow-play-symbolic.svg \
	cinnamon/applets/slideshow@cinnamon.org/metadata.json \
	cinnamon/applets/sound@cinnamon.org/applet.js \
	cinnamon/applets/sound@cinnamon.org/metadata.json \
	cinnamon/applets/sound@cinnamon.org/settings-schema.json \
	cinnamon/applets/spacer@cinnamon.org/applet.js \
	cinnamon/applets/spacer@cinnamon.org/metadata.json \
	cinnamon/applets/spacer@cinnamon.org/settings-schema.json \
	cinnamon/applets/systray@cinnamon.org/applet.js \
	cinnamon/applets/systray@cinnamon.org/metadata.json \
	cinnamon/applets/trash@cinnamon.org/applet.js \
	cinnamon/applets/trash@cinnamon.org/metadata.json \
	cinnamon/applets/user@cinnamon.org/applet.js \
	cinnamon/applets/user@cinnamon.org/icons/logout-symbolic.svg \
	cinnamon/applets/user@cinnamon.org/icons/switch-user-symbolic.svg \
	cinnamon/applets/user@cinnamon.org/metadata.json \
	cinnamon/applets/user@cinnamon.org/settings-schema.json \
	cinnamon/applets/user@cinnamon.org/stylesheet.css \
	cinnamon/applets/window-list@cinnamon.org/applet.js \
	cinnamon/applets/window-list@cinnamon.org/metadata.json \
	cinnamon/applets/window-list@cinnamon.org/settings-schema.json \
	cinnamon/applets/windows-quick-list@cinnamon.org/applet.js \
	cinnamon/applets/windows-quick-list@cinnamon.org/icons/windows-quick-list-symbolic.svg \
	cinnamon/applets/windows-quick-list@cinnamon.org/metadata.json \
	cinnamon/applets/workspace-switcher@cinnamon.org/applet.js \
	cinnamon/applets/workspace-switcher@cinnamon.org/metadata.json \
	cinnamon/applets/workspace-switcher@cinnamon.org/settings-schema.json \
	cinnamon/applets/xrandr@cinnamon.org/applet.js \
	cinnamon/applets/xrandr@cinnamon.org/metadata.json \
	cinnamon/applets/xrandr@cinnamon.org/stylesheet.css \
	cinnamon/bumpmaps/birdnfish.png \
	cinnamon/bumpmaps/brick.png \
	cinnamon/bumpmaps/fish.png \
	cinnamon/bumpmaps/frost.png \
	cinnamon/bumpmaps/hex.png \
	cinnamon/bumpmaps/lizard.png \
	cinnamon/cinnamon-desktop-editor/directory-editor.ui \
	cinnamon/cinnamon-desktop-editor/launcher-editor.ui \
	cinnamon/cinnamon-looking-glass/lookingglass_proxy.py \
	cinnamon/cinnamon-looking-glass/page_extensions.py \
	cinnamon/cinnamon-looking-glass/page_inspect.py \
	cinnamon/cinnamon-looking-glass/page_log.py \
	cinnamon/cinnamon-looking-glass/page_results.py \
	cinnamon/cinnamon-looking-glass/page_windows.py \
	cinnamon/cinnamon-looking-glass/pageutils.py \
	cinnamon/cinnamon-menu-editor/cinnamon-menu-editor.ui \
	cinnamon/cinnamon-menu-editor/cme/MainWindow.py \
	cinnamon/cinnamon-menu-editor/cme/MenuEditor.py \
	cinnamon/cinnamon-menu-editor/cme/__init__.py \
	cinnamon/cinnamon-menu-editor/cme/config.py \
	cinnamon/cinnamon-menu-editor/cme/util.py \
	cinnamon/cinnamon-screensaver-lock-dialog/cinnamon-screensaver-lock-dialog.ui \
	cinnamon/cinnamon-settings-users/cinnamon-settings-users.svg \
	cinnamon/cinnamon-settings-users/cinnamon-settings-users.ui \
	cinnamon/cinnamon-settings/bin/ChooserButtonWidgets.py \
	cinnamon/cinnamon-settings/bin/ExtensionCore.py \
	cinnamon/cinnamon-settings/bin/GSettingsWidgets.py \
	cinnamon/cinnamon-settings/bin/JsonSettingsWidgets.py \
	cinnamon/cinnamon-settings/bin/Spices.py \
	cinnamon/cinnamon-settings/bin/TreeListWidgets.py \
	cinnamon/cinnamon-settings/bin/__init__.py \
	cinnamon/cinnamon-settings/bin/capi.py \
	cinnamon/cinnamon-settings/bin/eyedropper.py \
	cinnamon/cinnamon-settings/bin/imtools.py \
	cinnamon/cinnamon-settings/bin/proxygsettings.py \
	cinnamon/cinnamon-settings/bin/tweenEquations.py \
	cinnamon/cinnamon-settings/cinnamon-online-accounts-info.ui \
	cinnamon/cinnamon-settings/cinnamon-settings.ui \
	cinnamon/cinnamon-settings/config.py \
	cinnamon/cinnamon-settings/modules/cs_applets.py \
	cinnamon/cinnamon-settings/modules/cs_desklets.py \
	cinnamon/desklets/clock@cinnamon.org/desklet.js \
	cinnamon/desklets/clock@cinnamon.org/metadata.json \
	cinnamon/desklets/clock@cinnamon.org/settings-schema.json \
	cinnamon/desklets/launcher@cinnamon.org/desklet.js \
	cinnamon/desklets/launcher@cinnamon.org/editorDialog.ui \
	cinnamon/desklets/launcher@cinnamon.org/metadata.json \
	cinnamon/desklets/photoframe@cinnamon.org/desklet.js \
	cinnamon/desklets/photoframe@cinnamon.org/icon.png \
	cinnamon/desklets/photoframe@cinnamon.org/metadata.json \
	cinnamon/desklets/photoframe@cinnamon.org/settings-schema.json \
	cinnamon/desklets/photoframe@cinnamon.org/stylesheet.css \
	cinnamon/faces/0_cars.jpg \
	cinnamon/faces/0_chess.jpg \
	cinnamon/faces/0_coffee.jpg \
	cinnamon/faces/0_guitar.jpg \
	cinnamon/faces/2_10.png \
	cinnamon/faces/2_11.png \
	cinnamon/faces/2_12.png \
	cinnamon/faces/2_13.png \
	cinnamon/faces/3_lightning.jpg \
	cinnamon/faces/3_mountain.jpg \
	cinnamon/faces/3_sky.jpg \
	cinnamon/faces/3_sunset.jpg \
	cinnamon/faces/4_cinnamon.jpg \
	cinnamon/faces/4_flower.jpg \
	cinnamon/faces/4_leaf.jpg \
	cinnamon/faces/4_sunflower.jpg \
	cinnamon/faces/5_fish.jpg \
	cinnamon/faces/5_kitten.jpg \
	cinnamon/faces/5_penguin.jpg \
	cinnamon/faces/5_puppy.jpg \
	cinnamon/faces/6_astronaut.jpg \
	cinnamon/faces/6_butterfly.png \
	cinnamon/faces/6_flake.jpg \
	cinnamon/faces/6_grapes.jpg \
	cinnamon/faces/7_bat.png \
	cinnamon/faces/7_dog.png \
	cinnamon/faces/7_elephant.png \
	cinnamon/faces/7_fox.png \
	cinnamon/faces/7_lion.png \
	cinnamon/faces/7_panda.png \
	cinnamon/faces/7_penguin.png \
	cinnamon/faces/7_tucan.png \
	cinnamon/faces/user-generic.png \
	cinnamon/icons/move-symbolic.svg \
	cinnamon/sounds/bell.ogg \
	cinnamon/sounds/togglekeys-sound-off.ogg \
	cinnamon/sounds/togglekeys-sound-on.ogg \
	cinnamon/thumbnails/cinnamon/unknown.png \
	cinnamon/thumbnails/cursors/Adwaita.png \
	cinnamon/thumbnails/cursors/DMZ-Black.png \
	cinnamon/thumbnails/cursors/DMZ-White.png \
	cinnamon/thumbnails/cursors/unknown.png \
	cinnamon/thumbnails/gtk-3.0/Adwaita-dark.png \
	cinnamon/thumbnails/gtk-3.0/Adwaita.png \
	cinnamon/thumbnails/gtk-3.0/Box.png \
	cinnamon/thumbnails/gtk-3.0/HighContrast.png \
	cinnamon/thumbnails/gtk-3.0/README \
	cinnamon/thumbnails/gtk-3.0/unknown.png \
	cinnamon/thumbnails/metacity-1/Adwaita-dark.png \
	cinnamon/thumbnails/metacity-1/Adwaita.png \
	cinnamon/thumbnails/metacity-1/AgingGorilla.png \
	cinnamon/thumbnails/metacity-1/Atlanta.png \
	cinnamon/thumbnails/metacity-1/Box.png \
	cinnamon/thumbnails/metacity-1/Bright.png \
	cinnamon/thumbnails/metacity-1/Crux.png \
	cinnamon/thumbnails/metacity-1/Esco.png \
	cinnamon/thumbnails/metacity-1/HighContrast.png \
	cinnamon/thumbnails/metacity-1/Metabox.png \
	cinnamon/thumbnails/metacity-1/README \
	cinnamon/thumbnails/metacity-1/Simple.png \
	cinnamon/thumbnails/metacity-1/unknown.png \
	cinnamon/thumbnails/wallclock.png \
	dbus-1/services/org.Cinnamon.Melange.service \
	dbus-1/services/org.Cinnamon.Slideshow.service \
	desktop-directories/cinnamon-audio-video.directory \
	desktop-directories/cinnamon-c.directory \
	desktop-directories/cinnamon-development.directory \
	desktop-directories/cinnamon-education.directory \
	desktop-directories/cinnamon-game.directory \
	desktop-directories/cinnamon-graphics.directory \
	desktop-directories/cinnamon-hardware.directory \
	desktop-directories/cinnamon-internet-and-network.directory \
	desktop-directories/cinnamon-look-and-feel.directory \
	desktop-directories/cinnamon-menu-applications.directory \
	desktop-directories/cinnamon-menu-system.directory \
	desktop-directories/cinnamon-network.directory \
	desktop-directories/cinnamon-office.directory \
	desktop-directories/cinnamon-other.directory \
	desktop-directories/cinnamon-personal.directory \
	desktop-directories/cinnamon-settings-system.directory \
	desktop-directories/cinnamon-settings.directory \
	desktop-directories/cinnamon-system-tools.directory \
	desktop-directories/cinnamon-system.directory \
	desktop-directories/cinnamon-utility-accessibility.directory \
	desktop-directories/cinnamon-utility.directory \
	icons/hicolor/scalable/apps/cinnamon-symbolic.svg \
	icons/hicolor/scalable/apps/cinnamon.svg \
	polkit-1/actions/org.cinnamon.settings-users.policy \
	xsessions/cinnamon.desktop \
	xsessions/cinnamon2d.desktop

if HAVE_NETWORKMANAGER
nobase_dist_cinnamon_DATA += \
	cinnamon/applets/network@cinnamon.org/applet.js \
	cinnamon/applets/network@cinnamon.org/icons/network-wireless-signal-excellent-secure-symbolic.svg \
	cinnamon/applets/network@cinnamon.org/icons/network-wireless-signal-good-secure-symbolic.svg \
	cinnamon/applets/network@cinnamon.org/icons/network-wireless-signal-none-secure-symbolic.svg \
	cinnamon/applets/network@cinnamon.org/icons/network-wireless-signal-ok-secure-symbolic.svg \
	cinnamon/applets/network@cinnamon.org/icons/network-wireless-signal-weak-secure-symbolic.svg \
	cinnamon/applets/network@cinnamon.org/metadata.json
endif HAVE_NETWORKMANAGER

nobase_nodist_cinnamon_session_DATA = cinnamon-session/sessions/cinnamon.session \
	cinnamon-session/sessions/cinnamon2d.session
cinnamon_sessiondir = $(datadir)
CLEANFILES = $(nobase_nodist_cinnamon_session_DATA)

%.session: %.session.in
if HAVE_NETWORKMANAGER
	cp -fp $< $@
else !HAVE_NETWORKMANAGER
	sed -e "s/;nm-applet//" $< >$@
endif !HAVE_NETWORKMANAGER
